[tool.poetry]
name = "khoros"
version = "5.2.2"
description = "Useful tools and utilities to assist in managing a Khoros Communities (formerly Lithium) environment."
authors = ["Jeff Shurtliff <jeff.shurtliff@rsa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
defusedxml = ">=0.7.1"
pytest = {version = ">=7.2.0", markers = "python_version > \"3.7\""}
pyyaml = ">=5.3.1"
urllib3 = ">=1.26.2,<1.27.0"
requests = {version = ">=2.31.0", markers = "python_version > \"3.6\""}
setuptools = {version = ">=65.5.1,<65.6.0", markers = "python_version > \"3.6\""}
sphinx = ">=5.3.0"
sphinxcontrib-applehelp = ">=1.0.2"
sphinxcontrib-devhelp = ">=1.0.2"
sphinxcontrib-htmlhelp = ">=2.0.0"
sphinxcontrib-jsmath = ">=1.0.1"
sphinxcontrib-qthelp = ">=1.0.3"
sphinxcontrib-serializinghtml = ">=1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
